crates/ui/src/view/snapshots/tgt_ui__view__auth__tests__code_entry_with_error_70x20.snap
---
source: crates/ui/src/view/auth.rs
expression: "render_to_string(70, 20, &state)"
---
                                                                      
                                                                      
                                                                      
                                                                      
          ┌────────────────── Enter code ──────────────────┐          
          │SMS to +1***34 (5 digits)                       │          
          │┌ Code ────────────────────────────────────────┐│          
          ││0000                                          ││          
          │└──────────────────────────────────────────────┘│          
          │code invalid                                    │          
          │                                                │          
          │⏎ confirm                                       │          
          │                                                │          
          │                                                │          
          └────────────────────────────────────────────────┘
