crates/ui/src/view/snapshots/tgt_ui__view__auth__tests__credentials_wizard_input_boxes_render_typed_text_100x30.snap
---
source: crates/ui/src/view/auth.rs
expression: rendered
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
               ┌─────────────────────── Connect to Telegram ────────────────────────┐               
               │Telegram apps need an API id and hash issued to a developer account.│               
               │Visit my.telegram.org, log in with your phone number, then open     │               
               │"API development tools" to create one.                              │               
               │                                                                    │               
               │┌ API id ──────────────────────────────────────────────────────────┐│               
               ││1234567                                                           ││               
               │└──────────────────────────────────────────────────────────────────┘│               
               │                                                                    │               
               │┌ API hash ────────────────────────────────────────────────────────┐│               
               ││                                                                  ││               
               │└──────────────────────────────────────────────────────────────────┘│               
               │                                                                    │               
               │                                                                    │               
               │Tab/⏎ next field · ⏎ on API hash to continue                        │               
               └────────────────────────────────────────────────────────────────────┘
