crates/ui/src/view/snapshots/tgt_ui__view__auth__tests__method_choice_120x40.snap
---
source: crates/ui/src/view/auth.rs
expression: "render_to_string(120, 40, &state)"
---
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                   ┌─────────────────── Sign in ────────────────────┐                                   
                                   │How would you like to sign in?                  │                                   
                                   │                                                │                                   
                                   │▶ Phone number                                  │                                   
                                   │  QR code                                       │                                   
                                   │                                                │                                   
                                   │↑↓ choose · p phone · q qr · ⏎ continue         │                                   
                                   │                                                │                                   
                                   │                                                │                                   
                                   └────────────────────────────────────────────────┘
