crates/ui/src/view/snapshots/tgt_ui__view__auth__tests__phone_escape_hint_highlighted_70x20.snap
---
source: crates/ui/src/view/auth.rs
expression: "render_to_string(70, 20, &state)"
---
           Scan this QR code with Telegram on another device          
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                         Requesting a QR code…                        
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                  ▶ Sign in with phone number instead                 
                         ↑↓ select · ⏎ confirm
