crates/ui/src/view/snapshots/tgt_ui__view__auth__tests__qr_screen_120x40.snap
---
source: crates/ui/src/view/auth.rs
expression: "render_to_string(120, 40, &state)"
---
                                    Scan this QR code with Telegram on another device                                   
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                               █▀▀▀▀▀█  ▀▄▄█▄▀██ █▀▀▀▀▀█                                                
                                               █ ███ █ ▀██▄▀ █ ▄ █ ███ █                                                
                                               █ ▀▀▀ █  ▄▀  ▄▀█▀ █ ▀▀▀ █                                                
                                               ▀▀▀▀▀▀▀ █▄█ █ █ █ ▀▀▀▀▀▀▀                                                
                                               ██▀ █▀▀██ ██▀  ▀███  ▄█ ▄                                                
                                               ▀ █▄▀ ▀█▀▀ ▄▀▄ ▄▄█▄██▄  █                                                
                                               ▀█ ▀▄▀▀█▄▄ ▄▄▀█ █ █   ▄██                                                
                                               ▀▄▀▀ ▀▀█▄▄▀▄█ █  ▀▄▀ █ █▀                                                
                                               ▀  ▀ ▀▀▀█ ▄▄▀▄▀██▀▀▀█ ▄▀█                                                
                                               █▀▀▀▀▀█ █  ▀▀▀▄▀█ ▀ █▀ ▀▀                                                
                                               █ ███ █ ▀ ▄ ▀▀  █▀▀██ ▄ ▀                                                
                                               █ ▀▀▀ █ █ █▄▄ ▀█▄▀ ▀█ ▀▄▀                                                
                                               ▀▀▀▀▀▀▀ ▀▀ ▀ ▀ ▀▀ ▀▀   ▀▀                                                
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                        Settings → Devices → Link Desktop Device
