crates/ui/src/view/snapshots/tgt_ui__view__auth__tests__qr_screen_70x20.snap
---
source: crates/ui/src/view/auth.rs
expression: "render_to_string(70, 20, &state)"
---
           Scan this QR code with Telegram on another device          
                                                                      
                                                                      
                      █▀▀▀▀▀█  ▀▄▄█▄▀██ █▀▀▀▀▀█                       
                      █ ███ █ ▀██▄▀ █ ▄ █ ███ █                       
                      █ ▀▀▀ █  ▄▀  ▄▀█▀ █ ▀▀▀ █                       
                      ▀▀▀▀▀▀▀ █▄█ █ █ █ ▀▀▀▀▀▀▀                       
                      ██▀ █▀▀██ ██▀  ▀███  ▄█ ▄                       
                      ▀ █▄▀ ▀█▀▀ ▄▀▄ ▄▄█▄██▄  █                       
                      ▀█ ▀▄▀▀█▄▄ ▄▄▀█ █ █   ▄██                       
                      ▀▄▀▀ ▀▀█▄▄▀▄█ █  ▀▄▀ █ █▀                       
                      ▀  ▀ ▀▀▀█ ▄▄▀▄▀██▀▀▀█ ▄▀█                       
                      █▀▀▀▀▀█ █  ▀▀▀▄▀█ ▀ █▀ ▀▀                       
                      █ ███ █ ▀ ▄ ▀▀  █▀▀██ ▄ ▀                       
                      █ ▀▀▀ █ █ █▄▄ ▀█▄▀ ▀█ ▀▄▀                       
                      ▀▀▀▀▀▀▀ ▀▀ ▀ ▀ ▀▀ ▀▀   ▀▀                       
                                                                      
                    Sign in with phone number instead                 
               Settings → Devices → Link Desktop Device               
                         ↑↓ select · ⏎ confirm
