crates/ui/src/view/snapshots/tgt_ui__view__auth__tests__qr_screen_too_small_falls_back_to_link_40x12.snap
---
source: crates/ui/src/view/auth.rs
expression: rendered
---
Scan this QR code with Telegram on anoth
                                        
     Terminal too small for QR code.    
                                        
    Open this link on another device:   
      tg://login?token=AAAABBBBCCCC     
                                        
                                        
                                        
     Sign in with phone number instead  
Settings → Devices → Link Desktop Device
          ↑↓ select · ⏎ confirm
